--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+#board {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.hex-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 .hex {
     float: left;
     margin-left: 3px;
@@ -19,10 +32,4 @@
     border-top: 30px solid #6C6;
     border-left: 52px solid transparent;
     border-right: 52px solid transparent;
-}
-.hex-row {
-    clear: left;
-}
-.hex-row.even {
-    margin-left: 53px;
 }
