--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+#selector_board_container {
+    display: flex;
+}
+
+#aspect_selector {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
 #board {
     display: flex;
     flex-direction: column;
