--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 #aspect_selector {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 #board {
@@ -12,6 +13,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.aspect_image {
+    border: dashed 3px red;
 }
 
 .hex-row {
